<?xml version="1.0"?>
<package format="2">
  <name>actions_tutorial</name>
  <version>0.0.0</version>
  <description>The actions_tutorial package</description>

  <maintainer email="jan.rosell@upc.edu">Jan Rosell</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>mastering_ros_robot_description_pkg</exec_depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>