<?xml version="1.0"?>
<package format="2">
  <name>mastering_ros_demo_pkg</name>
  <version>0.0.3</version>
  <description>The mastering_ros_demo_pkg package</description>

  <maintainer email="jan.rosell@upc.edu">robot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
